--- a/05- Sass/style.css
+++ b/05- Sass/style.css
@@ -11,4 +11,26 @@ p {
   color: #5f2020;
 }
 
+.caja {
+  border: 1px solid black;
+  width: 500px;
+  margin: 0px auto;
+  text-align: center;
+  background-color: white;
+  padding: 10px;
+}
+.caja h1 {
+  color: blue;
+}
+.caja p {
+  color: green;
+}
+.caja .info {
+  font-size: 10px;
+}
+.caja .info .author {
+  font-size: 15px;
+  color: orange;
+}
+
 /*# sourceMappingURL=style.css.map */
