--- a/05- Sass/estilos.scss
+++ b/05- Sass/estilos.scss
@@ -1,45 +1,3 @@
-$fuente-tipica: sans-serif, Helvetica, Arial;
-$color-fondo: #ccc;
-$color-letra:red;
-$color-secudario:rgb(95, 32, 32);
-
-
-body{
-    background-color: $color-fondo;
-}
-
-h1 {
-    font-family: $fuente-tipica;
-    color: $color-letra;
-}
-
-p{
-    color: $color-secudario;
-  }
-
-.caja {
-    border: 1px solid black;
-    width: 500px;
-    margin: 0px auto;
-    text-align: center;
-    background-color: white;
-    padding: 10px;
-
-    h1{
-        color: blue;
-    }
-
-    p{
-        color: green;
-    }
-
-    .info{
-        font-size: 10px;
-
-        .author{
-            font-size: 15px;
-            color: orange;
-        }
-    }
-
-}
+/*Modulos*/
+@use 'base';
+@use 'encabezado';
