--- a/05- Sass/style.css
+++ b/05- Sass/style.css
@@ -1,3 +1,5 @@
+/*Variables*/
+/*Uso de variables*/
 body {
   background-color: #ccc;
 }
@@ -11,6 +13,7 @@ p {
   color: #5f2020;
 }
 
+/*Anidacion*/
 .caja {
   border: 1px solid black;
   width: 500px;
@@ -32,5 +35,22 @@ p {
   font-size: 15px;
   color: orange;
 }
+
+.caja {
+  border: 10px solid blue;
+  border-radius: 10px;
+  box-shadow: 0px 0px 10px black;
+}
+.caja .listado {
+  border: 20px solid green;
+  border-radius: 20px;
+  box-shadow: 0px 0px 20px orange;
+}
+
+h1 {
+  text-decoration: underline;
+}
+
+/*Modulos*/
 
 /*# sourceMappingURL=style.css.map */
