--- a/05- Sass/style.css
+++ b/05- Sass/style.css
@@ -47,6 +47,19 @@ p {
   box-shadow: 0px 0px 20px orange;
 }
 
+.alert-danger, .alert {
+  border: 1px solid gray;
+  background: #eee;
+  color: fuchsia;
+  padding: 10px;
+  width: 100%;
+  margin: 0 auto;
+}
+
+.alert-danger {
+  color: red;
+}
+
 h1 {
   text-decoration: underline;
 }
