--- a/05- Sass/_base.scss
+++ b/05- Sass/_base.scss
@@ -70,7 +70,7 @@ p{
     background: #eee;
     color: fuchsia;
     padding: 10px;
-    width: 100%;
+    width: 90%;
     margin: 0 auto;
 }
 
@@ -81,4 +81,28 @@ p{
 .alert-danger{
     @extend %alert-normal;
     color: red;
+}
+
+//Operadores (operaciones matemáticas en CSS) 
+.clearfix{
+    clear: both;
+}
+h1{
+    font-size: 20px +5px -1px;
+}
+$caja:200px;
+$wrap:900px;
+
+$tamano_caja: 200px/900px  *100%;
+
+.cajas{
+    width: $wrap;
+    margin: 0px auto;
+    
+}
+
+.caja{
+    float: left;
+    width:$caja / $wrap * 100%;
+    margin: 10px;
 }
