Operadores y estructuras de control con LESS

--- a/06- Less/estilos.less
+++ b/06- Less/estilos.less
@@ -33,3 +33,33 @@ h1{
 .informacion{
     .sombras(5px);
 }
+
+//operadores
+
+h1{
+    font-size: 30px +7px;
+}
+
+//mixins condicionales
+
+.textoNegro(@value) when (@value=true){
+    color: green;
+}
+
+h1{
+    color: blue;
+    .textoNegro(true);
+}
+
+//Bucles
+
+.loop(@cont) when (@cont > 0){
+    .loop((@cont - 1));
+    height: (1200px / @cont);
+}
+
+.informacion{
+    height: 900px;
+    .loop(5);
+}
+
