--- a/06- Less/style.css
+++ b/06- Less/style.css
@@ -12,3 +12,18 @@ h1 {
   box-shadow: 0px 0px 5px black;
   text-shadow: 0px 0px 5px black;
 }
+h1 {
+  font-size: 30px 7px;
+}
+h1 {
+  color: blue;
+  color: green;
+}
+.informacion {
+  height: 900px;
+  height: 1200px;
+  height: 600px;
+  height: 400px;
+  height: 300px;
+  height: 240px;
+}
