--- a/07-Flexbox/style.css
+++ b/07-Flexbox/style.css
@@ -6,6 +6,9 @@ body{
     border:3px solid black;
     padding: 5px;
     display: flex;
+    /* flex-direction: row;
+    flex-wrap: wrap; */
+    flex-flow: row wrap;
 }
 
 .caja{
