--- a/07-Flexbox/style.css
+++ b/07-Flexbox/style.css
@@ -1,4 +1,5 @@
 body{
+    --rojo: red;
     font-family: Arial, Helvetica, sans-serif;
     text-align: center;
 }
@@ -12,6 +13,8 @@ body{
 }
 
 .caja{
+    flex-basis: calc((100%/3) -68px );
+    flex-grow: 1;
     font-size: 20px;
     font-weight: bold;
     text-align: center;
@@ -20,28 +23,26 @@ body{
     border: 4px solid #222;
     margin:10px;
     background: gray;
-    
 }
 
 .red{
     
-    background: red;
-    flex-grow: 2;
+    background: var(--rojo);
 }
 
 
 .green{
-    flex-shrink: 2;
+    
     background: green;
 }
 
 .blue{
-    flex-shrink: 0;
+    
     background: blue;
 }
 
 
 .orange{
-   
+    flex-basis: 100%;
     background: orange;
 }
