--- a/08- Maquetacion Flexbox/style.css
+++ b/08- Maquetacion Flexbox/style.css
@@ -27,6 +27,7 @@
 }
 
 .logo{
+    flex-grow: 1;
     flex-basis: 65%;
     padding: 10px;
     margin-left: 20px;
@@ -40,4 +41,32 @@
     font-style: italic;
     font-weight: 900;
     font-size: 35px;
+}
+
+#menu{
+    flex-grow: 1;
+    flex-basis: 30%;
+    height: 100%;
+    padding-right: 20px;
+}
+
+#menu >ul {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-between;
+    height: 100%;
+    list-style-type: none;
+}
+
+#menu a{
+    text-transform: uppercase;
+    color: #444;
+    padding: 15px;
+    transition: all 300ms;
+}
+
+#menu a:hover{
+    background: #ccc;
+    color: wheat;
 }
