--- a/08- Maquetacion Flexbox/style.css
+++ b/08- Maquetacion Flexbox/style.css
@@ -70,3 +70,49 @@
     background: #ccc;
     color: wheat;
 }
+
+#content{
+    display: flex;
+    justify-content: space-between;
+    padding-bottom: 20px;
+    padding-top: 20px;
+}
+
+#projects{
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-between;
+    flex-basis: 80%;
+}
+
+.project{
+    flex: 1 250px;
+    margin-bottom: 25px;
+    margin-right: 20px ;
+    border: 1px solid #ccc;
+}
+
+.project img{
+    width: 100%;
+}
+
+.project-info{
+    padding: 10px;
+}
+
+.project-info a{
+    font-size: 16px;
+    color: black;
+    transition: all 300ms;
+}
+
+.project-info a:hover{
+    
+    color: green;
+    
+}
+
+.project-info p:hover{
+    font-size: 16px;
+    color: gray;
+}
