--- a/08- Maquetacion Flexbox/style.css
+++ b/08- Maquetacion Flexbox/style.css
@@ -116,3 +116,46 @@
     font-size: 16px;
     color: gray;
 }
+
+#aside{
+    display: flex;
+    flex-flow: column wrap;
+    flex-basis: 15%;
+    margin-right:30px ;
+    padding: 15px;
+}
+
+#aside h2{
+    display: block;
+    width: 100%;
+    font-size: 18px;
+    font-weight: 100;
+    color: #444;
+    padding-bottom:10px ;
+    margin-bottom: 20px;
+    border-bottom:1px solid rgba(225, 225, 226, 0.8);
+    text-align: center;
+}
+
+#aside ul{
+    list-style: none;
+}
+
+#aside ul li{
+    padding-bottom: 20px;
+}
+
+#aside a{
+    text-align: center;
+    display: block;
+    padding: 20px;
+    background: #eee;
+    color: #444;
+    transition: all 300ms;
+    text-transform: uppercase;
+}
+
+#aside a:hover{
+    background: #444;
+    color: #eee;
+}
