--- a/09- Grid/style.css
+++ b/09- Grid/style.css
@@ -1,1 +1,33 @@
-body{color: blue;}
+body{
+    text-align: center;
+    font-family: sans-serif ;
+}
+
+.layout{
+    border: 3px solid orangered;
+}
+
+.layout .caja{
+    font-size: 20px;
+    font-weight: bold;
+    color: white;
+    padding: 20px;
+    border: 4px solid #222;
+    margin: 10px;
+}
+
+.layout  .red{
+    background: red;
+}
+
+.layout  .blue{
+    background: blue;
+}
+
+.layout  .green{
+    background: green;
+}
+
+.layout .pink{
+    background: pink;
+}
