--- a/09- Grid/style.css
+++ b/09- Grid/style.css
@@ -4,6 +4,14 @@ body{
 }
 
 .layout{
+    width: 1200px;
+    margin: 0px auto;
+    /*Definir el cotenedor de grid*/
+    display: grid;
+    grid-template-columns: 50% 25%;
+
+    /*Espaciado entre los elementos de grid*/
+    grid-gap: 10px;
     border: 3px solid orangered;
 }
 
@@ -13,7 +21,6 @@ body{
     color: white;
     padding: 20px;
     border: 4px solid #222;
-    margin: 10px;
 }
 
 .layout  .red{
