--- a/09- Grid/style.css
+++ b/09- Grid/style.css
@@ -9,10 +9,12 @@ body{
     /*Definir el cotenedor de grid*/
     display: grid;
     /* grid-template-columns: repeat(2, calc(25% - 10px)); */
-    grid-template-columns: repeat(2, calc(25% - 10px)) 25% 25%;
-    grid-template-columns: repeat(4, 1fr);
+    /* grid-template-columns: repeat(2, calc(25% - 10px)) 25% 25%; */
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: 1fr 3fr;
 
     /*Espaciado entre los elementos de grid*/
+    height: 300px;
     grid-gap: 10px;
     padding: 10px;
     border: 3px solid orangered;
