--- a/09- Grid/style.css
+++ b/09- Grid/style.css
@@ -10,11 +10,11 @@ body{
     display: grid;
     /* grid-template-columns: repeat(2, calc(25% - 10px)); */
     /* grid-template-columns: repeat(2, calc(25% - 10px)) 25% 25%; */
-    grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: 1fr 3fr;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(2, 1fr) 3fr;
 
     /*Espaciado entre los elementos de grid*/
-    height: 300px;
+    min-height: 300px;
     grid-gap: 10px;
     padding: 10px;
     border: 3px solid orangered;
@@ -29,6 +29,8 @@ body{
 }
 
 .layout  .red{
+    grid-column-start: 1;
+    grid-column-end:4 ;
     background: red;
 }
 
@@ -38,8 +40,22 @@ body{
 
 .layout  .green{
     background: green;
+    grid-column: 1 / 3;
 }
 
 .layout .pink{
     background: pink;
+    /* grid-column-start:1 ;
+    grid-column-end: 3; */
+    grid-column: 1 / 3;
+    
+}
+
+.layout  .quinta{
+    background: blue;
+}
+
+.layout .sexta{
+    background: orange;
+    grid-column: 1/4;
 }
