--- a/09- Grid/style.css
+++ b/09- Grid/style.css
@@ -3,6 +3,85 @@ body{
     font-family: sans-serif ;
 }
 
+/*INICIO MAQUETADO CON GRIDareas*/
+#website-areas{
+    margin: 0px;
+    padding: 0px;
+}
+
+#website-areas{
+    display: grid;
+    grid-template-columns: repeat(5,1fr);
+    grid-template-rows: 150px 70px 1fr 70px;
+    grid-template-areas:
+        "cabecera cabecera cabecera cabecera cabecera"
+        "menu menu menu menu menu"
+        "lateral contenido contenido contenido contenido "
+        "lateral footer footer footer footer"
+        ;
+    width: 75%;
+    height: 100vh;
+    margin: 0px auto;
+    border: 1px solid #ccc;
+}
+
+#website-areas #cabecera{
+    grid-area: cabecera;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: blue;
+    color: white;
+    
+}
+
+
+#website-areas #menu ul{
+    display: grid;
+    grid-template-columns: repeat(9, 1fr);
+    list-style: none;
+    margin: 0px ;
+    padding: 0px;
+}
+
+#website-areas #menu{
+    grid-area: menu;
+    background: lightblue;
+    color: black;
+    line-height: 70px;
+}
+
+
+#website-areas #contenido{
+    grid-area: contenido;
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
+    grid-gap: 25px;
+    padding: 20px;
+    background: #eee;
+
+}
+
+#website-areas #contenido article{
+    background:#ccc;
+    border: 1px solid #555;
+}
+
+#website-areas #lateral{
+    grid-area: lateral;
+    background: orange;
+    color: white;
+}
+
+#website-areas #pie-pagina{
+    grid-area: footer;
+    background: black;
+    color: white;
+}
+
+/*fIN MAQUETADO CON GRIDareas*/
+
+/*INICIO MAQUETADO CON GRID*/
 #website{
     margin: 0px;
     padding: 0px;
@@ -18,7 +97,7 @@ body{
     border: 1px solid #ccc;
 }
 
-#cabecera{
+#website #cabecera{
     display: flex;
     justify-content: center;
     align-items: center;
@@ -29,7 +108,7 @@ body{
 }
 
 
-#menu ul{
+#website #menu ul{
     display: grid;
     grid-template-columns: repeat(9, 1fr);
     list-style: none;
@@ -37,14 +116,15 @@ body{
     padding: 0px;
 }
 
-#menu{
+#website #menu{
     grid-column: 1 / 6;
     background: lightblue;
     color: black;
+    line-height: 70px;
 }
 
 
-#contenido{
+#website #contenido{
     grid-column: 1 / 5;
     display: grid;
     grid-template-columns: repeat(3,1fr);
@@ -54,22 +134,26 @@ body{
 
 }
 
-#contenido article{
+#website #contenido article{
     background:#ccc;
     border: 1px solid #555;
 }
 
-#lateral{
+#website #lateral{
     grid-column: 5 / 6;
     background: orange;
     color: white;
 }
 
-#pie-pagina{
+#website #pie-pagina{
     grid-column: 1 / 6;
     background: black;
     color: white;
 }
+
+/*fIN MAQUETADO CON GRID*/
+
+/*EJEMPLO*/
 
 .layout{
 
