--- a/08- Maquetacion grid/style.css
+++ b/08- Maquetacion grid/style.css
@@ -122,7 +122,7 @@
     color: gray;
 }
 
-#aside{
+#aside{   
     
     margin-right:30px ;
     padding: 15px;
@@ -164,9 +164,11 @@
 }
 
 #footer{
-    
+    display: grid;
+    grid-template-columns: 1fr 25%;
+    align-items: center;
+    justify-content: flex-start;
     height: 120px;
-    
     border-bottom:1px solid rgba(225, 225, 226, 0.8);
 }
 
@@ -184,3 +186,88 @@
 
 /*Responsive*/
 
+@media (max-width:1254px){
+
+    #header {
+        display: grid;
+        grid-template-columns: 61% 30%;
+    }
+
+    #menu{
+        grid-template-columns: repeat(3,1fr);
+    }
+}
+
+@media (max-width:834px){
+
+    #header {
+        display: grid;
+        grid-template-columns: 55% 30%;
+    }
+
+    #menu{
+        grid-template-columns: repeat(3,1fr);
+    }
+}
+
+@media (max-width:784px){
+    #header{
+        display: grid;
+        grid-template-columns: 100%;
+        align-items: center;
+        justify-content: center;
+        height: 140px;
+        padding-bottom:20px ;
+    }
+    #header h1{
+        text-align: center;
+    }
+
+    
+    #content{
+        display: grid;
+        grid-template-columns: 1fr;
+        align-items: start;
+        justify-content: space-between;
+        grid-column-gap: auto;
+    }
+
+    #projects{
+        display: grid;
+        grid-template-columns:1fr;
+        grid-gap: 20px;
+        margin-right: 10px;
+        margin-left: 10px;
+    }
+
+    .project{
+        margin-right: 10px;
+        margin-left: 10px;
+    }
+
+    #aside{
+        margin:0;
+        padding:15px;
+    }
+
+    #aside ul{
+        display: grid;
+        grid-template-columns: repeat(4,1fr);
+        grid-gap: 10px;
+    }
+
+    #footer{
+        display: grid;
+        grid-template-columns: 1fr;
+        align-items: center;
+        justify-content: flex-start;
+        height: 120px;
+    }
+    #footer .info{
+        text-align: center;
+    }
+
+    #footer .logo{
+        text-align: center;
+    }
+}
